objects/Task_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Definition__c</fullName>
        <label>Activity Definition</label>
        <referenceTo>Activity_Definition__c</referenceTo>
        <relationshipLabel>Project Task Definitions</relationshipLabel>
        <relationshipName>Project_Task_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Duration__c</fullName>
        <label>Expected Duration</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Activity_Name__c</fullName>
        <label>External Activity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NotifyWhenComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyWhenComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminal_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminal Task</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Task Definition</label>
    <nameField>
        <displayFormat>TID-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>